--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,10 @@
             <div class="card">
               <img src="{{ url_for('get_image', image_id=image['id']) }}" class="card-img-top" alt="Изображение">
               <div class="card-body">
-                <p class="card-text">Загружено: {{ image['upload_time'] }}</p>
+                <p class="card-text">Загружено в {{ image['upload_time'].split()[1] }} </p>
+                <p class="card-text" style="color:gray"> {{ image['upload_time'].split()[0].split('-')[2]+'.' + image['upload_time'].split()[0].split('-')[1] + '.' + image['upload_time'].split()[0].split('-')[0][2:4] }}</p>
+                <!-- Кнопка удаления -->
+                <button type="button" class="btn btn-danger btn-sm delete-image-btn" data-image-id="{{ image['id'] }}">Удалить</button>
               </div>
             </div>
           </div>
@@ -75,5 +78,39 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () 
+    {
+      const deleteButtons = document.querySelectorAll('.delete-image-btn');
+
+      deleteButtons.forEach(button => 
+      {
+        button.addEventListener('click', function () 
+        {
+          const imageId = this.dataset.imageId;
+          if (confirm('Вы уверены, что хотите удалить это изображение?')) 
+          {
+            fetch(`/delete_image/${imageId}`, 
+            {
+                method: 'POST',
+            })
+            .then(response => 
+            {
+              if (response.ok) {
+                // Удалить карточку изображения из DOM
+                this.closest('.col-md-4').remove();
+              } else {
+                alert('Ошибка при удалении изображения.');
+              }
+            })
+            .catch(error => {
+              console.error('Ошибка:', error);
+              alert('Произошла ошибка при отправке запроса.');
+            });
+          }
+        });
+      });
+    });
+  </script>
 </body>
 </html>
